force-app/main/default/objects/AcctPlanCompanyPort__c/AcctPlanCompanyPort__c.object-meta.xml
<CustomObject>
    <label>Account Plan Company Port</label>
    <nameField>
        <displayFormat>CP-{0000000}</displayFormat>
        <label>AcctPlanCompanyPort Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plan Company Ports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>