force-app/main/default/objects/AcctPlanCompanyPort__c/fields/Account_Plan_Company_Profile__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Company_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Plan Company Profile</label>
    <referenceTo>AcctPlanCompanyProfile__c</referenceTo>
    <relationshipName>AcctPlanCompanyPorts</relationshipName>
    <type>Lookup</type>
</CustomField>