force-app/main/default/objects/AcctPlanCompanyPort__c/fields/AcctPlanGroupPort__c.field-meta.xml
<CustomField>
    <fullName>AcctPlanGroupPort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AcctPlanGroupPort</label>
    <referenceTo>AcctPlanGroupPort__c</referenceTo>
    <relationshipName>AcctPlanCompanyPorts</relationshipName>
    <type>Lookup</type>
</CustomField>