force-app/main/default/objects/AcctPlanCompanyPort__c/fields/Available_for_Account_Plan__c.field-meta.xml
<CustomField>
    <fullName>Available_for_Account_Plan__c</fullName>
    <formula>ISPICKVAL(Account__r.Account_Plan_Flag__c,&apos;Yes&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available for Account Plan</label>
    <type>Checkbox</type>
</CustomField>