force-app/main/default/objects/AcctPlanCompanyPort__c/fields/ExpectedNIbyAccountPlan__c.field-meta.xml
<CustomField>
    <fullName>ExpectedNIbyAccountPlan__c</fullName>
    <label>ExpectedNIbyAccountPlan</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>