force-app/main/default/objects/AcctPlanCompanyPort__c/fields/Performance__c.field-meta.xml
<CustomField>
    <fullName>Performance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Performance</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>