force-app/main/default/objects/AcctPlanCompanyPort__c/fields/Target_NI_By_RM__c.field-meta.xml
<CustomField>
    <fullName>Target_NI_By_RM__c</fullName>
    <label>Target NI By RM</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>