force-app/main/default/objects/AcctPlanCompanyPort__c/fields/TMB_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>TMB_Customer_ID__c</fullName>
    <formula>Account__r.TMB_Customer_ID_PE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TMB Customer ID</label>
    <type>Text</type>
</CustomField>