force-app/main/default/objects/AcctPlanCompanyPort__c/fields/Wallet__c.field-meta.xml
<CustomField>
    <fullName>Wallet__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Snp shoot for customer wallet</description>
    <label>Wallet</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>